Added styling to the index and login page

--- a/index.html
+++ b/index.html
@@ -40,21 +40,22 @@
   <!------------------------------>
   <!-- Your HTML Layout go here -->
 
-  <!-- Navbar with contact and FAQ -->
   <nav id="navbarPlaceholder"></nav>
 
-  <!-- login -->
-  <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
-    <div class="card" style="width: 20rem;">
+  <!-- Login Section -->
+  <div class="d-flex justify-content-center align-items-center vh-100">
+    <div class="card index-card">
       <div class="card-body">
-        <h5 class="card-title">Ready to Start a Consistent Routine?</h5>
-        <p class="card-text">Click Below to Create Your First Schedule and Get Started Today!</p>
-        <div class="start-button">
-          <a href="login.html" class="btn btn-custom" role="button">START</a>
+        <h3 class="card-title text-center">Ready to Start a Consistent Routine?</h3>
+        <p class="card-text text-center">Plan better. Succeed daily. Start your journey today!</p>
+        <div id="firebaseui-auth-container"></div>
+        <div class="start-button text-center">
+          <a href="login.html" class="btn btn-custom" role="button">GET STARTED</a>
         </div>
       </div>
     </div>
   </div>
+  
   <!------------------------------>
   <!-- Stuff for body goes here -->
 
