--- a/presetTimers.html
+++ b/presetTimers.html
@@ -142,18 +142,18 @@
         <div id="timerPresets" class="list-group">
           <div class="list-group-item d-flex justify-content-between align-items-center">
             <div class="timeContainer">
-              <span class="preset-name font-weight-bold">Study | Pomodoro</span>
+              <span class="study-preset-name font-weight-bold">Study | Pomodoro</span>
               <div class="row mt-2">
                 <div class="col text-center">
-                  <p class="preset-hours">00 : </p>
-                  <p class="preset-minutes">25 : </p>
-                  <p class="preset-seconds">00</p>
+                  <p class="study-preset-hours">00 : </p>
+                  <p class="study-preset-minutes">25 : </p>
+                  <p class="study-preset-seconds">00</p>
                 </div>
               </div>
             </div>
             <div class="form-check form-switch" id="toggleButton">
-              <input class="form-check-input" type="checkbox" role="switch" style="transform: scale(1.25)">
-              <label class="form-check-label" for="presetToggle"
+              <input class="form-check-input study" type="checkbox" role="switch" style="transform: scale(1.25)">
+              <label class="form-check-label study" for="presetToggle"
                 style="min-width:60px; text-align:left; font-size:80%;">Inactive</label>
             </div>
           </div>
@@ -163,25 +163,25 @@
         <div id="timerPresets" class="list-group">
           <div class="list-group-item d-flex justify-content-between align-items-center">
             <div class="timeContainer">
-              <span class="preset-name font-weight-bold">Break | Pomodoro</span>
+              <span class="study-preset-name font-weight-bold">Break | Pomodoro</span>
               <div class="row mt-2">
                 <div class="col text-center">
-                  <p class="preset-hours">00 : </p>
-                  <p class="preset-minutes">05 : </p>
-                  <p class="preset-seconds">00</p>
+                  <p class="study-preset-hours">00 : </p>
+                  <p class="study-preset-minutes">00 : </p>
+                  <p class="study-preset-seconds">02</p>
                 </div>
               </div>
             </div>
             <div class="form-check form-switch" id="toggleButton">
-              <input class="form-check-input" type="checkbox" role="switch" style="transform: scale(1.25)">
-              <label class="form-check-label" for="presetToggle"
+              <input class="form-check-input study" type="checkbox" role="switch" style="transform: scale(1.25)">
+              <label class="form-check-label study" for="presetToggle"
                 style="min-width:60px; text-align:left; font-size:80%;">Inactive</label>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="emptySpace" style="padding-bottom: 30%;">
+    <div class="emptySpace" style="padding-bottom: 8rem;">
     </div>
   </div>
 
