Styling changes, changed toast background to white, changed toast size, changed position of timer dropdown and countdown timer display

--- a/countdownTimers.html
+++ b/countdownTimers.html
@@ -60,7 +60,7 @@
   </div>
 
   <!-- The body of your page goes here -->
-  <div id="countdownTimerContainer" class="countdownTimer" style="display: block;">
+  <div id="countdownTimerContainer" class="countdownTimer" style="display: block; margin-top: 2rem;">
     <div class="text-center mt-3" style="width: 80%; margin: 0 auto;">
       <div class="row mb-4">
         <div class="col">
