--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="card index-card">
       <div class="card-body">
         <h3 class="card-title text-center">Ready to Start a Consistent Routine?</h3>
-        <p class="card-text text-center">Plan better. Succeed daily. Start your journey today!</p>
+        <p class="card-text text-center">Plan Effectively and Succeed Daily, Start Your Journey Today!</p>
         <div id="firebaseui-auth-container"></div>
         <div class="start-button text-center">
           <a href="login.html" class="btn btn-custom" role="button">GET STARTED</a>
