Added friends.js script tag to timer and main page

--- a/presetTimers.html
+++ b/presetTimers.html
@@ -208,6 +208,7 @@
   <script src="./scripts/skeleton.js"></script>
   <script src="./scripts/main.js"></script>
   <script src="./scripts/presetTimers.js"></script>
+  <script src="./scripts/friends.js"></script>
 
 </body>
 
