--- a/main.html
+++ b/main.html
@@ -124,6 +124,7 @@
   <!---------------------------------------------->
   <script src="./scripts/firebaseAPI_TEAM05.js"></script>
   <script src="./scripts/skeleton.js"></script>
+  <script src="./scripts/friends.js"></script>
   <script src="./scripts/main.js"></script>
 
 </body>
