Changed timer dropdown to buttons for easier navigation

--- a/alarmTimers.html
+++ b/alarmTimers.html
@@ -49,17 +49,15 @@
 
 
   <!--blank area for timers-->
-  <div class="dropdown">
-    <a class="btn btn-custom dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-      style="background:white;">
-      <u>Alarm Timers</u>
+  <div class="presetTimerButtons">
+    <a class="btn btn-custom" href="#"
+      style="background-color: #417ab8; color: white;">
+      <u>Countdowns</u>
     </a>
-
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="countdownTimers.html">Countdown Timer</a></li>
-      <li><a class="dropdown-item" href="presetTimers.html">Preset Timers</a></li>
-    </ul>
-  </div>
+    <a class="btn btn-custom" id="alarmButton" href="alarmTimers.html" style="background-color: #417ab8; color: white;">Alarms</a></li>
+    <a class="btn btn-custom" id="presetButton" href="presetTimers.html" style="background-color: #417ab8; color: white;">Presets</a></li>
+  </ul>
+</div>
 
   <!-- The body of your page goes here -->
 
