--- a/countdownTimers.html
+++ b/countdownTimers.html
@@ -46,19 +46,6 @@
   <!-- Your HTML Layout go here -->
   <!------------------------------>
 
-
-  <div class="dropdown">
-    <a class="btn btn-custom dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-      style="background:white;">
-      <u>Countdown Timer</u>
-    </a>
-
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="alarmTimers.html">Alarm Timers</a></li>
-      <li><a class="dropdown-item" href="presetTimers.html">Preset Timers</a></li>
-    </ul>
-  </div>
-
   <!-- The body of your page goes here -->
   <div id="countdownTimerContainer" class="countdownTimer" style="display: block; margin-top: 2rem;">
     <div class="text-center mt-3" style="width: 80%; margin: 0 auto;">
@@ -95,6 +82,15 @@
     </div>
   </div>
 
+  <div class="timerButtons">
+    <a class="btn btn-custom" href="#"
+      style="background-color: #417ab8; color: white;">
+      <u>Countdowns</u>
+    </a>
+    <a class="btn btn-custom" id="alarmButton" href="alarmTimers.html" style="background-color: #417ab8; color: white;">Alarms</a></li>
+    <a class="btn btn-custom" id="presetButton" href="presetTimers.html" style="background-color: #417ab8; color: white;">Presets</a></li>
+  </ul>
+</div>
   <!-- Our own navbar goes here -->
   <nav id="navbarPlaceholder"></nav>
   <!-- Our own footer goes here-->
