--- a/presetTimers.html
+++ b/presetTimers.html
@@ -49,16 +49,12 @@
 
 
   <!--blank area for timers-->
-  <div class="dropdown">
-    <a class="btn btn-custom dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-      style="background:white;">
-      <u>Preset Timers</u>
-    </a>
 
-    <button id="addTimerButton" class="btn btn-custom">Create Preset</button>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="alarmTimers.html">Alarm Timers</a></li>
-      <li><a class="dropdown-item" href="countdownTimers.html">Countdown Timer</a></li>
+    <div class="presetTimerButtons">
+      <a class="btn btn-custom" href="countdownTimers.html"
+        style="background-color: #417ab8; color: white;">Countdowns</a>
+      <a class="btn btn-custom" id="alarmButton" href="alarmTimers.html" style="background-color: #417ab8; color: white;">Alarms</a></li>
+      <a class="btn btn-custom" id="presetButton" href="countdownTimers.html" style="background-color: #417ab8; color: white;"><u>Presets</u></a></li>
     </ul>
   </div>
 
