--- a/schedule.html
+++ b/schedule.html
@@ -77,7 +77,7 @@
         <label for="location" class="form-label">Location</label>
         <input type="text" class="form-control" id="location" name="location">
       </div>
-      <button type="submit" class="btn btn-primary">Save Event</button>
+      <button type="submit" href="main.html" class="btn btn-primary">Save Event</button>
     </form>
   </div>
 
