--- a/countdownTimers.html
+++ b/countdownTimers.html
@@ -91,6 +91,14 @@
     <a class="btn btn-custom" id="presetButton" href="presetTimers.html" style="background-color: #417ab8; color: white;">Presets</a></li>
   </ul>
 </div>
+
+      <!-- toasts for notifs-->
+      <div id="basicToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-body">
+          <span id="toast-message"></span>
+        </div>
+      </div>
+      
   <!-- Our own navbar goes here -->
   <nav id="navbarPlaceholder"></nav>
   <!-- Our own footer goes here-->
