--- a/main.html
+++ b/main.html
@@ -114,6 +114,13 @@
     </ul>
   </div>
 
+      <!-- toasts for notifs-->
+      <div id="basicToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-body">
+          <span id="toast-message"></span>
+        </div>
+      </div>
+      
     <!-- Our own navbar goes here -->
   <nav id="navbarPlaceholder" style="position: sticky;"></nav>
   <!-- Our own footer goes here-->
