changed styling of timer buttons removed and rearranged some html with timers

--- a/countdownTimers.html
+++ b/countdownTimers.html
@@ -47,6 +47,17 @@
   <!------------------------------>
 
   <!-- The body of your page goes here -->
+  <div class="timerButtons">
+    <a class="btn btn-custom" href="#" style="background-color: #417ab8; color: white; border: 1px solid black;">
+      <u>Timers</u>
+    </a>
+    <a class="btn btn-custom" href="presetTimers.html" 
+    style="background-color: #417ab8; color: white; border: 1px solid black;">Presets</a>
+    <a class="btn btn-custom" href="alarmTimers.html" 
+    style="background-color: #417ab8; color: white; border: 1px solid black;">Alarms</a>
+  </ul>
+</div>
+
   <div id="countdownTimerContainer" class="countdownTimer" style="display: block; margin-top: 2rem;">
     <div class="text-center mt-3" style="width: 80%; margin: 0 auto;">
       <div class="row mb-4">
@@ -81,16 +92,6 @@
       <button id="startTimer" class="btn btn-primary mt-1" style="width: 40%;">Start</button>
     </div>
   </div>
-
-  <div class="timerButtons">
-    <a class="btn btn-custom" href="#"
-      style="background-color: #417ab8; color: white;">
-      <u>Countdowns</u>
-    </a>
-    <a class="btn btn-custom" id="alarmButton" href="alarmTimers.html" style="background-color: #417ab8; color: white;">Alarms</a></li>
-    <a class="btn btn-custom" id="presetButton" href="presetTimers.html" style="background-color: #417ab8; color: white;">Presets</a></li>
-  </ul>
-</div>
   <!-- Our own navbar goes here -->
   <nav id="navbarPlaceholder"></nav>
   <!-- Our own footer goes here-->
