--- a/presetTimers.html
+++ b/presetTimers.html
@@ -50,12 +50,13 @@
 
   <!--blank area for timers-->
 
-    <div class="presetTimerButtons">
-      <a class="btn btn-custom" href="countdownTimers.html"
-        style="background-color: #417ab8; color: white;">Countdowns</a>
-      <a class="btn btn-custom" id="alarmButton" href="alarmTimers.html" style="background-color: #417ab8; color: white;">Alarms</a></li>
-      <a class="btn btn-custom" id="presetButton" href="countdownTimers.html" style="background-color: #417ab8; color: white;"><u>Presets</u></a></li>
-    </ul>
+    <div class="timerButtons">
+      <a class="btn btn-custom" href="countdownTimers.html" 
+      style="background-color: #417ab8; color: white; border: 1px solid black;"href="#">Timers</a>
+      <a class="btn btn-custom" 
+      style="background-color: #417ab8; color: white; border: 1px solid black;"href="#"><u>Presets</u></a>
+      <a class="btn btn-custom" href="alarmTimers.html" 
+      style="background-color: #417ab8; color: white; border: 1px solid black;"href="#">Alarms</a>
   </div>
 
   <div id="presetTimerContainer" class="preset-timer" style="display: none;">
