--- a/alarmTimers.html
+++ b/alarmTimers.html
@@ -49,13 +49,12 @@
 
 
   <!--blank area for timers-->
-  <div class="presetTimerButtons">
-    <a class="btn btn-custom" href="#"
-      style="background-color: #417ab8; color: white;">
-      <u>Countdowns</u>
-    </a>
-    <a class="btn btn-custom" id="alarmButton" href="alarmTimers.html" style="background-color: #417ab8; color: white;">Alarms</a></li>
-    <a class="btn btn-custom" id="presetButton" href="presetTimers.html" style="background-color: #417ab8; color: white;">Presets</a></li>
+  <div class="timerButtons">
+    <a class="btn btn-custom" href="countdownTimers.html" 
+    style="background-color: #417ab8; color: white; border: 1px solid black;"href="#">Timers</a>
+    <a class="btn btn-custom" href="presetTimers.html" style="background-color: #417ab8; color: white; border: 1px solid black;">Presets</a>
+    <a class="btn btn-custom" href="#" 
+    style="background-color: #417ab8; color: white; border: 1px solid black;"href="#"><u>Alarms</u></a>
   </ul>
 </div>
 
