Created cancel and pause buttons for timer and made it so only after clicking start the cancel and pause buttons appear

--- a/alarmTimers.html
+++ b/alarmTimers.html
@@ -54,7 +54,7 @@
     style="background-color: #417ab8; color: white; border: 1px solid black;"href="#">Timers</a>
     <a class="btn btn-custom" href="presetTimers.html" style="background-color: #417ab8; color: white; border: 1px solid black;">Presets</a>
     <a class="btn btn-custom" href="#" 
-    style="background-color: #417ab8; color: white; border: 1px solid black;"href="#"><u>Alarms</u></a>
+    style="background-color: #417ab8; color: white; border: 1px solid black;"href="#"><u><b>Alarms</b></u></a>
   </ul>
 </div>
 
