--- a/presetTimers.html
+++ b/presetTimers.html
@@ -54,7 +54,7 @@
       <a class="btn btn-custom" href="countdownTimers.html" 
       style="background-color: #417ab8; color: white; border: 1px solid black;"href="#">Timers</a>
       <a class="btn btn-custom" 
-      style="background-color: #417ab8; color: white; border: 1px solid black;"href="#"><u>Presets</u></a>
+      style="background-color: #417ab8; color: white; border: 1px solid black;"href="#"><u><b>Presets</b></u></a>
       <a class="btn btn-custom" href="alarmTimers.html" 
       style="background-color: #417ab8; color: white; border: 1px solid black;"href="#">Alarms</a>
   </div>
@@ -84,6 +84,10 @@
     <div class="card">
       <div class="card-header text-center">
         <h4>Custom Timer Presets</h4>
+        <button id="addTimerButton" class="btn btn-custom" 
+        style="background:white; border: 1px solid rgb(174, 174, 174); margin-top: -5%; margin-left: 5%; margin-right: 0;">
+          <u>Create Preset</u>
+        </button>
       </div>
       <div class="card-body">
         <div id="timerPresets" class="list-group">
