--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-lg shadow p-3 mb-5 bg-body rounded">
+<nav class="navbar fixed-top navbar-expand-lg shadow p-3 mb-5 bg-body">
     <div class="container-fluid">
       <a class="navbar-brand" href="main.html">RoutineSync</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
