--- a/countdownTimers.html
+++ b/countdownTimers.html
@@ -49,7 +49,7 @@
   <!-- The body of your page goes here -->
   <div class="timerButtons">
     <a class="btn btn-custom" href="#" style="background-color: #417ab8; color: white; border: 1px solid black;">
-      <u>Timers</u>
+      <u><b>Timers</b></u>
     </a>
     <a class="btn btn-custom" href="presetTimers.html" 
     style="background-color: #417ab8; color: white; border: 1px solid black;">Presets</a>
@@ -89,7 +89,11 @@
           <button id="downSeconds" style="font-size: 150%;">˅</button>
         </div>
       </div>
-      <button id="startTimer" class="btn btn-primary mt-1" style="width: 40%;">Start</button>
+      <button id="startTimer" class="btn btn-primary mt-1" style="width: 40%; display: block; margin: 0 auto;">Start</button>
+      <div class="duringTimerButtons" style="display: none">
+        <button id="cancelTimer" class="btn btn-danger mt-1" style="width: 40%;">Cancel</button>
+        <button id="pauseTimer" class="btn btn mt-1" style="width: 40%; background-color: rgb(157, 157, 157); color: white;">Pause</button>
+    </div>
     </div>
   </div>
 
