--- a/presetTimers.html
+++ b/presetTimers.html
@@ -50,33 +50,41 @@
 
   <!--blank area for timers-->
 
-    <div class="timerButtons">
-      <a class="btn btn-custom" href="countdownTimers.html" 
-      style="background-color: #417ab8; color: white; border: 1px solid black;"href="#">Timers</a>
-      <a class="btn btn-custom" 
-      style="background-color: #417ab8; color: white; border: 1px solid black;"href="#"><u><b>Presets</b></u></a>
-      <a class="btn btn-custom" href="alarmTimers.html" 
-      style="background-color: #417ab8; color: white; border: 1px solid black;"href="#">Alarms</a>
+  <div class="timerButtons">
+    <a class="btn btn-custom" href="countdownTimers.html"
+      style="background-color: #417ab8; color: white; border: 1px solid black;" href="#">Timers</a>
+    <a class="btn btn-custom" style="background-color: #417ab8; color: white; border: 1px solid black;"
+      href="#"><u><b>Presets</b></u></a>
+    <a class="btn btn-custom" href="alarmTimers.html"
+      style="background-color: #417ab8; color: white; border: 1px solid black;" href="#">Alarms</a>
   </div>
 
   <div id="presetTimerContainer" class="preset-timer" style="display: none;">
     <h1 class="text-center">Create a Preset Timer</h1>
-    <input type="text" id="presetName" class="form-control" placeholder="Preset Name" style="text-align:Center; padding-top: 2%; padding-bottom: 2%; font-size: 150%;"
-      maxlength="18">
+    <input type="text" id="presetName" class="form-control" placeholder="Preset Name"
+      style="text-align:Center; padding-top: 2%; padding-bottom: 2%; font-size: 150%;" maxlength="18">
     <div class="text-center mt-3">
       <div class="row mb-4">
         <div class="col">
-          <input type="number" id="hours" class="form-control" style="text-align:Center; padding-top: 2%; padding-bottom: 2%; font-size: 125%;" placeholder="Hours" min="0" max="99">
+          <input type="number" id="hours" class="form-control"
+            style="text-align:Center; padding-top: 2%; padding-bottom: 2%; font-size: 125%;" placeholder="Hours" min="0"
+            max="99">
         </div>
         <div class="col">
-          <input type="number" id="minutes" class="form-control" style="text-align:Center; padding-top: 2%; padding-bottom: 2%; font-size: 125%;" placeholder="Minutes" min="0" max="59">
+          <input type="number" id="minutes" class="form-control"
+            style="text-align:Center; padding-top: 2%; padding-bottom: 2%; font-size: 125%;" placeholder="Minutes"
+            min="0" max="59">
         </div>
         <div class="col">
-          <input type="number" id="seconds" class="form-control" style="text-align:Center; padding-top: 2%; padding-bottom: 2%; font-size: 125%;"placeholder="Seconds" min="0" max="59">
+          <input type="number" id="seconds" class="form-control"
+            style="text-align:Center; padding-top: 2%; padding-bottom: 2%; font-size: 125%;" placeholder="Seconds"
+            min="0" max="59">
         </div>
       </div>
-      <button id="savePreset" class="btn btn-primary mt-1" style="width: 30%; padding-top: 1%; padding-bottom: 1%; ">Save</button>
-      <button id="cancelPreset" class="btn btn-danger mt-1" style="width: 30%; padding-top: 1%; padding-bottom: 1%;">Cancel</button>
+      <button id="savePreset" class="btn btn-primary mt-1"
+        style="width: 30%; padding-top: 1%; padding-bottom: 1%; ">Save</button>
+      <button id="cancelPreset" class="btn btn-danger mt-1"
+        style="width: 30%; padding-top: 1%; padding-bottom: 1%;">Cancel</button>
     </div>
   </div>
 
@@ -84,12 +92,14 @@
     <div class="card">
       <div class="card-header text-center">
         <h4>Custom Timer Presets</h4>
-        <button id="addTimerButton" class="btn btn-custom" 
-        style="background:white; border: 1px solid rgb(174, 174, 174); margin-top: -5%; margin-left: 5%; margin-right: 0;">
-          <u>Create Preset</u>
-        </button>
       </div>
       <div class="card-body">
+        <button id="addTimerButton" class="btn btn-custom"
+          style="background:white; border: 1px solid rgb(174, 174, 174); margin-left: 5%; margin-right: 0; width: 100%;">
+          Create Preset
+        </button>
+      </div>
+      <div class="card-body" style="margin-top: -1rem;">
         <div id="timerPresets" class="list-group">
           <div class="list-group-item d-flex justify-content-between align-items-center">
             <div class="timeContainer">
@@ -103,15 +113,19 @@
               </div>
             </div>
             <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" role="switch" style="transform: scale(1.25)">
-              <label class="form-check-label" for="presetToggle"
+              <input class="form-check-input preset" type="checkbox" role="switch" style="transform: scale(1.25)">
+              <label class="form-check-label preset" for="presetToggle"
                 style="min-width:60px; text-align:left; font-size:80%;">Inactive</label>
             </div>
           </div>
+          <div class="timerOptions d-flex gap-2" style="display: inline; width: 100%;">
+            <button class="cancel-timer btn btn-danger mt-1"
+              style="width: 50%; color: white; display:none;">Cancel</button>
+            <button class="pause-timer btn btn mt-1"
+              style="width: 50%; background-color: rgb(157, 157, 157); color: white; display:none">Pause</button>
+          </div>
         </div>
-      </div>
-      <div class="card-body">
-        <div id="timerPresets" class="list-group">
+        <div id="timerPresets" style="padding-top: 0.5rem;" class="list-group">
           <div class="list-group-item d-flex justify-content-between align-items-center">
             <div class="timeContainer">
               <span class="preset-name font-weight-bold">Blank Timer</span>
@@ -124,10 +138,16 @@
               </div>
             </div>
             <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" role="switch" style="transform: scale(1.25)">
-              <label class="form-check-label" for="presetToggle"
+              <input class="form-check-input preset" type="checkbox" role="switch" style="transform: scale(1.25)">
+              <label class="form-check-label preset" for="presetToggle"
                 style="min-width:60px; max-width: 100%; text-align:left; font-size:80%;">Inactive</label>
             </div>
+          </div>
+          <div class="timerOptions d-flex gap-2" style="display: inline; width: 100%;">
+            <button class="cancel-timer btn btn-danger mt-1"
+              style="width: 50%; color: white; display:none;">Cancel</button>
+            <button class="pause-timer btn btn mt-1"
+              style="width: 50%; background-color: rgb(157, 157, 157); color: white; display:none">Pause</button>
           </div>
         </div>
       </div>
@@ -158,18 +178,22 @@
                 style="min-width:60px; text-align:left; font-size:80%;">Inactive</label>
             </div>
           </div>
+          <div class="timerOptions d-flex gap-2" style="display: inline; width: 100%;">
+            <button class="cancel-study-timer btn btn-danger mt-1"
+              style="width: 50%; color: white; display:none;">Cancel</button>
+            <button class="pause-study-timer btn btn mt-1"
+              style="width: 50%; background-color: rgb(157, 157, 157); color: white; display:none">Pause</button>
+          </div>
         </div>
-      </div>
-      <div class="card-body">
-        <div id="timerPresets" class="list-group">
+        <div id="timerPresets" style="padding-top: 0.5rem;" class="list-group">
           <div class="list-group-item d-flex justify-content-between align-items-center">
             <div class="timeContainer">
               <span class="study-preset-name font-weight-bold">Break | Pomodoro</span>
               <div class="row mt-2">
                 <div class="col text-center">
                   <p class="study-preset-hours">00 : </p>
-                  <p class="study-preset-minutes">05 : </p>
-                  <p class="study-preset-seconds">00</p>
+                  <p class="study-preset-minutes">00 : </p>
+                  <p class="study-preset-seconds">05</p>
                 </div>
               </div>
             </div>
@@ -179,10 +203,16 @@
                 style="min-width:60px; text-align:left; font-size:80%;">Inactive</label>
             </div>
           </div>
+          <div class="timerOptions d-flex gap-2" style="display: inline; width: 100%;">
+            <button class="cancel-study-timer btn btn-danger mt-1"
+              style="width: 50%; color: white; display:none;">Cancel</button>
+            <button class="pause-study-timer btn btn mt-1"
+              style="width: 50%; background-color: rgb(157, 157, 157); color: white; display:none">Pause</button>
+          </div>
         </div>
       </div>
     </div>
-    <div class="emptySpace" style="padding-bottom: 8rem;">
+    <div class="emptySpace" style="margin-bottom: 8rem;">
     </div>
   </div>
 
