--- a/schedule.html
+++ b/schedule.html
@@ -78,6 +78,7 @@
         <input type="text" class="form-control" id="location" name="location">
       </div>
       <button type="submit" href="main.html" class="btn btn-primary">Save Event</button>
+      <a href="main.html" class="btn btn-secondary ms-2">Go Back</a>
     </form>
   </div>
 
