--- a/countdownTimers.html
+++ b/countdownTimers.html
@@ -49,12 +49,12 @@
   <!-- The body of your page goes here -->
   <div class="timerButtons">
     <a class="btn btn-custom" href="#" style="background-color: #417ab8; color: white; border: 1px solid black;">
-      <u><b>Timers</b></u>
+      <u><b>Timer</b></u>
     </a>
     <a class="btn btn-custom" href="presetTimers.html" 
     style="background-color: #417ab8; color: white; border: 1px solid black;">Presets</a>
     <a class="btn btn-custom" href="alarmTimers.html" 
-    style="background-color: #417ab8; color: white; border: 1px solid black;">Alarms</a>
+    style="background-color: #417ab8; color: white; border: 1px solid black;">Alarm</a>
   </ul>
 </div>
 
@@ -66,8 +66,8 @@
           <button id="upHours" style="font-size: 150%; width: 100%; margin-bottom: 1rem;">˄</button>
           <p id="prevHour">99</p>
           <input type="number" style="padding-top: 15%; padding-bottom: 15%; text-align: center; font-size: 150%;" id="hoursCount" class="form-control" 
-          placeholder="0" min="0" max="99">
-          <p id="nextHour" style="margin-top: 1rem;">1</p>
+          placeholder="00" min="0" max="99">
+          <p id="nextHour" style="margin-top: 1rem;">01</p>
           <button id="downHours" style="font-size: 150%; width: 100%;">˅</button>
         </div>
         <div class="col">
@@ -75,8 +75,8 @@
           <button id="upMinutes" style="font-size: 150%; width: 100%; margin-bottom: 1rem;">˄</button>
           <p id="prevMinute">59</p>
           <input type="number" style="padding-top: 15%; padding-bottom: 15%;  text-align: center; font-size: 150%;" id="minutesCount" class="form-control" 
-          placeholder="0" min="0" max="59">
-          <p id="nextMinute" style="margin-top: 1rem">1</p>
+          placeholder="00" min="0" max="59">
+          <p id="nextMinute" style="margin-top: 1rem">01</p>
           <button id="downMinutes" style="font-size: 150%; width: 100%;">˅</button>
         </div>
         <div class="col">
@@ -84,8 +84,8 @@
           <button id="upSeconds" style="font-size: 150%; width: 100%; margin-bottom: 1rem;">˄</button>
           <p id="prevSecond">59</p>
           <input type="number" style="padding-top: 15%; padding-bottom: 15%;  text-align: center; font-size: 150%;" id="secondsCount" class="form-control" 
-          placeholder="0" min="0" max="59">
-          <p id="nextSecond" style="margin-top: 1rem;">1</p>
+          placeholder="00" min="0" max="59">
+          <p id="nextSecond" style="margin-top: 1rem;">01</p>
           <button id="downSeconds" style="font-size: 150%; width: 100%;">˅</button>
         </div>
       </div>
