--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -23,10 +23,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link" href="underConst.html">Contact Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">FAQ</a>
+          <a class="nav-link" href="underConst.html">FAQ</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="index.html">Logout</a>
