Capitalized repeat to be capitalized, changed titles for every page, fixed error of being able to change hour to 0 in alarms

--- a/notifs.html
+++ b/notifs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home Page</title>
+  <title>RoutineSync : Notifications</title>
   <meta name="comp1800 template" content="My 1800 App">
 
   <!------------------------>
