--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Profile Page</title>
+  <title>RoutineSync : Profile</title>
   <meta name="comp1800 template" content="My 1800 App">
 
   <!------------------------>
