--- a/schedule.html
+++ b/schedule.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Template Page</title>
+  <title>RoutineSync : Schedule</title>
   <meta name="comp1800 template" content="My 1800 App">
 
   <!------------------------>
@@ -67,10 +67,10 @@
       <div class="mb-3">
         <label for="repeat" class="form-label">Repeat</label>
         <select class="form-select" id="repeat" name="repeat">
-          <option value="none">No Repeat</option>
-          <option value="daily">Daily</option>
-          <option value="weekly">Weekly</option>
-          <option value="monthly">Monthly</option>
+          <option value="None">No Repeat</option>
+          <option value="Daily">Daily</option>
+          <option value="Weekly">Weekly</option>
+          <option value="Monthly">Monthly</option>
         </select>
       </div>
       <div class="mb-3">
