--- a/alarmTimers.html
+++ b/alarmTimers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Template Page</title>
+  <title>RoutineSync : Alarms</title>
   <meta name="comp1800 template" content="My 1800 App">
 
   <!------------------------>
