--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Landing Page</title>
+  <title>RoutineSync : Landing Page</title>
   <meta name="comp1800 template" content="My 1800 App">
 
   <!-- Required meta tags -->
