--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Login Page</title>
+    <title>RoutineSync : Login Page</title>
     <meta name="comp1800 template" content="My 1800 App">
 
     <!------------------------>
