--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home Page</title>
+  <title>RoutineSync : Home</title>
   <meta name="comp1800 template" content="My 1800 App">
 
   <!------------------------>
