--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -8,13 +8,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Benefits</a>
+            <a class="nav-link active" aria-current="page" href="underConstPreLogin.html">Benefits</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="underConstPreLogin.html">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Support</a>
+            <a class="nav-link" href="underConstPreLogin.html">Support</a>
           </li>
         </ul>
       </div>
