--- a/schedule.html
+++ b/schedule.html
@@ -88,7 +88,13 @@
   <!-- Our own footer goes here-->
   <nav id="footerPlaceholder"></nav>
 
-
+    <!-- toasts for notifs-->
+    <div id="basicToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-body">
+        <span id="toast-message"></span>
+      </div>
+    </div>
+    
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
   <!---------------------------------------------->
